# SerialSSHTerm

./: .gitignore  Cargo.toml  PACKAGING.md  README.en.md  README.md  build-deb.sh  build-exe.ps1  build-installer.ps1  install-deps-windows.ps1  install-deps.sh
.cargo/: audit.toml
debian/: changelog  control  copyright  rules  serial-ssh-term.desktop
src/: app.rs  main.rs
src/core/: connection.rs  logger.rs  mod.rs  secrets.rs  serial_manager.rs  settings.rs  ssh_manager.rs
src/ui/: connection_panel.rs  header_bar.rs  input_panel.rs  mod.rs  terminal_panel.rs  theme.rs  tools_dialog.rs  window.rs
