[package]
name = "serial-ssh-term"
version = "1.0.0"
edition = "2021"
authors = ["M@nu"]
description = "Terminal série et SSH professionnel avec interface GTK4/Libadwaita"
license = "MIT"
rust-version = "1.75"

[dependencies]
# GTK4 + Libadwaita pour l'interface moderne
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_5"] }

# Communication série
serialport = "4.6"

# SSH
# async-ssh2-tokio et ssh2 remplacés par russh direct pour un contrôle maximal
# (vérification de clé d'hôte interactive, PTY natif, SOLID sans dépendance externe).

# Async runtime
tokio = { version = "1", features = ["full"] }

# Sérialisation / Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilitaires
chrono = "0.4"
dirs = "5"
anyhow = "1"
meval = "0.2"
tokio-serial = "5.4.5"
async-channel = "2.5.0"
async-trait = "0.1.89"
russh = "0.55.0"
vte = { version = "0.15.0", features = ["ansi"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
